fix(css): Incorrect place card style in dark mode

--- a/src/components/PlaceInfo/Place.module.css
+++ b/src/components/PlaceInfo/Place.module.css
@@ -5,9 +5,3 @@
     font-size: 1.1em;
   }
 }
-
-[data-theme='dark'] {
-  .container {
-    color: var(--ifm-font-color-base);
-  }
-}
